--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,17 @@
           <daemonThreadJoinTimeout>${timeout}</daemonThreadJoinTimeout>
         </configuration>
       </plugin>
-
+      <!-- JUnit plugin for testing -->
+      <plugin>
+      	<groupId>org.apache.maven.plugins</groupId>
+      	<artifactId>maven-surefire-plugin</artifactId>
+      	<version>3.0.0-M8</version>
+      	<configuration>
+       	  <dependenciesToScan>
+            <dependency>org.junit.jupiter:junit-jupiter-api</dependency>
+          </dependenciesToScan>
+      	</configuration>
+      </plugin>
     </plugins>
   </build>
 
